# Tenodera

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  install-bridge.sh  install-panel.sh
Tenodera Agent/: .gitignore  Cargo.toml  Makefile  config.example.toml
Tenodera Agent/logrotate/: tenodera
Tenodera Agent/src/: audit.rs  auth.rs  config.rs  handler.rs  main.rs  router.rs  server.rs  tls.rs
Tenodera Agent/src/handlers/: containers.rs  disk_usage.rs  file_list.rs  hardware_info.rs  hosts.rs  journal_query.rs  kdump.rs  log_files.rs  metrics_stream.rs  mod.rs  network_stats.rs  networking.rs  packages.rs  storage.rs  superuser_verify.rs  system_info.rs  systemd_units.rs  terminal_pty.rs  top_processes.rs
Tenodera Agent/src/protocol/: channel.rs  error.rs  message.rs  mod.rs  payload.rs
Tenodera Agent/systemd/: tenodera-agent.service
Tenodera Panel/: .gitignore  Cargo.toml  INSTALL_README.md  MASTER_README.md  Makefile  Vagrantfile
Tenodera Panel/crates/bridge/: Cargo.toml  README.md
Tenodera Panel/crates/bridge/src/: lib.rs  main.rs  router.rs
Tenodera Panel/crates/bridge/src/handlers/: containers.rs  disk_usage.rs  file_list.rs  hardware_info.rs  hosts.rs  journal_query.rs  kdump.rs  log_files.rs  metrics_stream.rs  networking.rs  packages.rs  storage.rs  superuser_verify.rs  systemd_units.rs  terminal_pty.rs  top_processes.rs
Tenodera Panel/crates/gateway/: Cargo.toml  README.md
Tenodera Panel/crates/gateway/src/: audit.rs  auth.rs  bridge_transport.rs  config.rs  hosts_config.rs  main.rs  session.rs  tls.rs  ws.rs
Tenodera Panel/crates/priv-bridge/: Cargo.toml  README.md
Tenodera Panel/crates/priv-bridge/src/: main.rs
Tenodera Panel/crates/protocol/: Cargo.toml  README.md
Tenodera Panel/crates/protocol/src/: channel.rs  lib.rs  message.rs  payload.rs
Tenodera Panel/systemd/: README.md  tenodera-gateway.service  tenodera-priv-bridge.service
Tenodera Panel/ui/: README.md  package.json  vite.config.ts
Tenodera Panel/ui/src/: index.css
Tenodera Panel/ui/src/api/: HostTransportContext.tsx  auth.ts
Tenodera Panel/ui/src/pages/: Containers.tsx  Dashboard.tsx  Files.tsx  Hosts.tsx  Kdump.tsx  LogFiles.tsx  Login.tsx  Packages.tsx  Services.tsx  Shell.tsx  Terminal.tsx
bridge/: Cargo.toml  Makefile  README.md
bridge/src/: audit.rs  handler.rs  lib.rs  main.rs  router.rs  util.rs
bridge/src/handlers/: containers.rs  disk_usage.rs  file_list.rs  hardware_info.rs  hosts.rs  journal_query.rs  kdump.rs  log_files.rs  metrics_snapshot.rs  metrics_stream.rs  mod.rs  network_stats.rs  networking.rs  networking_snapshot.rs  packages.rs  storage.rs  storage_snapshot.rs  superuser_verify.rs  system_info.rs  systemd_units.rs  terminal_pty.rs  top_processes.rs  users.rs
panel/: Cargo.toml  Makefile
panel/crates/gateway/: Cargo.toml  README.md
panel/crates/gateway/src/: audit.rs  auth.rs  bridge_transport.rs  config.rs  hosts_config.rs  main.rs  pam.rs  rate_limit.rs  security_headers.rs  session.rs  tls.rs  ws.rs
panel/crates/pam-helper/: Cargo.toml
panel/crates/pam-helper/src/: main.rs
panel/systemd/: README.md  tenodera-gateway.service
panel/ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json
panel/ui/src/: App.tsx  index.css  main.tsx
panel/ui/src/api/: SuperuserContext.tsx  auth.ts  secureStorage.ts  transport.ts
panel/ui/src/pages/: BulkHosts.tsx  Containers.tsx  Dashboard.tsx  Files.tsx  Hosts.tsx  LogFiles.tsx  Login.tsx  Logs.tsx  Networking.tsx  Packages.tsx  Services.tsx  Shell.tsx  Storage.tsx  Terminal.tsx  Users.tsx
protocol/: Cargo.toml  README.md
protocol/src/: channel.rs  error.rs  lib.rs  message.rs  payload.rs
