[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/gateway",
    "crates/bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / WebSocket
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# D-Bus
zbus = "5"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Unix / system
nix = { version = "0.29", features = ["user", "process", "signal", "term", "fs", "ioctl", "hostname"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
bytes = "1"
zeroize = "1"

# Internal crates
tenodera-protocol = { path = "crates/protocol" }
tenodera-bridge = { path = "crates/bridge" }
