[package]
name = "tenodera-bridge"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "tenodera-bridge"
path = "src/main.rs"

[dependencies]
tenodera-protocol = { path = "../protocol" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"
tokio-stream = "0.1"
nix = { version = "0.29", features = ["user", "process", "signal", "term", "fs", "ioctl", "hostname"] }
zbus = "5"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
