[package]
name = "tenodera-bridge"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "tenodera-bridge"
path = "src/main.rs"

[dependencies]
tenodera-protocol = { path = "../protocol" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
nix = { version = "0.29", features = ["user", "hostname", "term"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
libc = "0.2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
