[package]
name = "tenodera-bridge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tenodera-bridge"
path = "src/main.rs"

[dependencies]
tenodera-protocol = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
nix = { workspace = true }
zbus = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
libc = "0.2"
uuid = { workspace = true }
