[package]
name = "tenodera-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tenodera-gateway"
path = "src/main.rs"

[dependencies]
tenodera-protocol = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
chrono = { workspace = true }
zeroize = { workspace = true }
libc = "0.2"
